Feat(eos_cli_config_gen): Add support for switchport port-security

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-device-documentation.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-device-documentation.j2
@@ -61,6 +61,8 @@
 {% include 'documentation/ip-security.j2' %}
 {# Interfaces #}
 {% include 'documentation/interfaces.j2' %}
+{## Switchport Port-security #}
+{% include 'documentation/switchport-port-security.j2' %}
 {# Routing #}
 {% include 'documentation/routing.j2' %}
 {# BFD #}
