--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-intended-config.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-intended-config.j2
@@ -35,6 +35,8 @@
 {% include 'eos/dhcp-servers.j2' %}
 {# switchport default #}
 {% include 'eos/switchport-default.j2' %}
+{# switchport port-security #}
+{% include 'eos/switchport-port-security.j2' %}
 {# internal vlan allocation policy #}
 {% include 'eos/vlan-internal-order.j2' %}
 {# ip igmp snooping #}
