--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/switchport-port-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/switchport-port-security.j2
@@ -6,14 +6,14 @@
 {# doc - switchport port-security #}
 {% if switchport_port_security is arista.avd.defined %}
 
-### Switchport Port-security
+## Switchport Port-security
 
-#### Switchport Port-security Summary
+### Switchport Port-security Summary
 
 | Settings | Value |
 | -------- | ----- |
 {%     if switchport_port_security.mac_address.aging is arista.avd.defined(true) %}
-| Mac-address Aging | {{ switchport_port_security.mac_address.moveable }} |
+| Mac-address Aging | {{ switchport_port_security.mac_address.aging }} |
 {%     endif %}
 {%     if switchport_port_security.mac_address.moveable is arista.avd.defined(true) %}
 | Mac-address Moveable | {{ switchport_port_security.mac_address.moveable }} |
@@ -22,10 +22,10 @@
 | Disable Persistence | {{ switchport_port_security.persistence_disabled }} |
 {%     endif %}
 {%     if switchport_port_security.violation_protect_chip_based is arista.avd.defined(true) %}
-| Violation Protect Chip-based | {{ switchport_port_security.persistence_disabled }} |
+| Violation Protect Chip-based | {{ switchport_port_security.violation_protect_chip_based }} |
 {%     endif %}
 
-#### Switchport Port-security Device Configuration
+### Switchport Port-security Device Configuration
 
 ```eos
 {%     include 'eos/switchport-port-security.j2' %}
