--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/ethernet-interfaces.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/ethernet-interfaces.j2
@@ -553,16 +553,18 @@ interface {{ ethernet_interface.name }}
 {%     if ethernet_interface.poe.legacy_detect is arista.avd.defined(true) %}
    poe legacy detect
 {%     endif %}
-{%     if ethernet_interface.switchport is arista.avd.defined %}
-{%         if ethernet_interface.switchport.port_security.enable is arista.avd.defined(true) %}
+{%     if ethernet_interface.switchport.port_security is arista.avd.defined %}
+{%         if ethernet_interface.switchport.port_security.enabled is arista.avd.defined(true) %}
    switchport port-security
 {%         endif %}
 {%         if ethernet_interface.switchport.port_security.violation.shutdown is arista.avd.defined(true) %}
    switchport port-security
-{%         elif ethernet_interface.switchport.port_security.violation.protect.enable is arista.avd.defined(true) %}
-   switchport port-security violation protect
-{%         elif ethernet_interface.switchport.port_security.violation.protect.log is arista.avd.defined(true) %}
+{%         elif ethernet_interface.switchport.port_security.violation.protect.enabled is arista.avd.defined(true) %}
+{%             if ethernet_interface.switchport.port_security.violation.protect.log is arista.avd.defined(true) %}
    switchport port-security violation protect log
+{%             else %}
+   switchport port-security violation protect
+{%             endif %}
 {%         endif %}
 {%         if ethernet_interface.switchport.port_security.mac_address_maximum.disabled is arista.avd.defined(true) %}
    switchport port-security mac-address maximum disabled
