--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/ethernet-interfaces.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/ethernet-interfaces.j2
@@ -554,11 +554,10 @@ interface {{ ethernet_interface.name }}
    poe legacy detect
 {%     endif %}
 {%     if ethernet_interface.switchport.port_security is arista.avd.defined %}
-{%         if ethernet_interface.switchport.port_security.enabled is arista.avd.defined(true) %}
+{%         if ethernet_interface.switchport.port_security.enabled is arista.avd.defined(true) or ethernet_interface.switchport.port_security.violation.mode is arista.avd.defined('shutdown') %}
    switchport port-security
-{%         endif %}
-{%         if ethernet_interface.switchport.port_security.violation.protect.enabled is arista.avd.defined(true) %}
-{%             if ethernet_interface.switchport.port_security.violation.protect.log is arista.avd.defined(true) %}
+{%         elif ethernet_interface.switchport.port_security.violation.mode is arista.avd.defined('protect') %}
+{%             if ethernet_interface.switchport.port_security.violation.protect_log is arista.avd.defined(true) %}
    switchport port-security violation protect log
 {%             else %}
    switchport port-security violation protect
@@ -569,7 +568,7 @@ interface {{ ethernet_interface.name }}
 {%         elif ethernet_interface.switchport.port_security.mac_address_maximum.limit is arista.avd.defined %}
    switchport port-security mac-address maximum {{ ethernet_interface.switchport.port_security.mac_address_maximum.limit }}
 {%         endif %}
-{%         if ethernet_interface.switchport.port_security.vlans is arista.avd.defined and ethernet_interface.switchport.port_security.violation.protect.enabled is not arista.avd.defined %}
+{%         if ethernet_interface.switchport.port_security.vlans is arista.avd.defined and ethernet_interface.switchport.port_security.violation.mode is not arista.avd.defined('protect') %}
 {%             for vlan in ethernet_interface.switchport.port_security.vlans %}
 {%                 if vlan.range is arista.avd.defined and vlan.mac_address_maximum is arista.avd.defined %}
 {%                     for id in vlan.range | arista.avd.range_expand %}
@@ -579,7 +578,7 @@ interface {{ ethernet_interface.name }}
 {%                 endif %}
 {%             endfor %}
 {%         endif %}
-{%         if ethernet_interface.switchport.port_security.vlan_default_mac_address_maximum is arista.avd.defined %}
+{%         if ethernet_interface.switchport.port_security.vlan_default_mac_address_maximum is arista.avd.defined and ethernet_interface.switchport.port_security.violation.mode is not arista.avd.defined('protect') %}
    switchport port-security vlan default mac-address maximum {{ ethernet_interface.switchport.port_security.vlan_default_mac_address_maximum }}
 {%         endif %}
 {%     endif %}
