--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/management-ssh.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/management-ssh.j2
@@ -51,6 +51,12 @@ management ssh
 {%     if management_ssh.mac is arista.avd.defined %}
    mac {{ management_ssh.mac | join(" ") }}
 {%     endif %}
+{%     if management_ssh.fips_restrictions is arista.avd.defined(true) %}
+   fips restrictions
+{%     endif %}
+{%     if management_ssh.hostkey.client_strict_checking is arista.avd.defined(true) %}
+   hostkey client strict-checking
+{%     endif %}
 {%     if management_ssh.hostkey.server is arista.avd.defined %}
    hostkey server {{ management_ssh.hostkey.server | join(" ") }}
 {%     endif %}
