--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/ip-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/ip-security.j2
@@ -62,6 +62,9 @@ ip security
 {%         if profile.dpd.interval is arista.avd.defined and profile.dpd.time is arista.avd.defined and profile.dpd.action is arista.avd.defined %}
       dpd {{ profile.dpd.interval }} {{ profile.dpd.time }} {{ profile.dpd.action }}
 {%         endif %}
+{%         if profile.flow_parallelization_encapsulation_udp is arista.avd.defined(true) %}
+      flow parallelization encapsulation udp
+{%         endif %}
 {%         if profile.mode is arista.avd.defined %}
       mode {{ profile.mode }}
 {%         endif %}
