--- a/ansible_collections/arista/avd/docs/templates/plugin-docs.j2
+++ b/ansible_collections/arista/avd/docs/templates/plugin-docs.j2
@@ -36,7 +36,7 @@ title: {{ collection | default("arista.avd", true) ~ "." ~ module }}
 {%         if spec.max %}
 {%             set _ = restrictions.append("Max value: <code>" ~ spec.max ~ "</code>") %}
 {%         endif %}
-{%         set description = spec.description | map("md_ify") | map("replace", "\.", ".") | map("replace", "\,", ",") | join("<br>") %}
+{%         set description = spec.description | map("md_ify") | map("replace", "\.", ".") | map("replace", "\,", ",") | join("<br>") | trim | replace("\n", "<br>") %}
 | <samp>{{ "&nbsp;" * 4 * level }}{{ name }}</samp> | {{ typ }} | {{ req }} | {{ def_val }} | {{ restrictions | join("<br>") }} | {{ description }} |
 {%         if spec.suboptions %}
 {{ option_desc(spec.suboptions, level + 1) -}}
@@ -50,7 +50,7 @@ title: {{ collection | default("arista.avd", true) ~ "." ~ module }}
 {%     endif %}
 {%     for name, spec in results.items() %}
 {%         set typ = spec.type | default("any") %}
-{%         set description = spec.description | map("md_ify") | map("replace", "\.", ".") | map("replace", "\,", ",") | join("<br>") %}
+{%         set description = spec.description | map("md_ify") | map("replace", "\.", ".") | map("replace", "\,", ",") | join("<br>") | trim | replace("\n", "<br>") %}
 | {{ "    " * level }}{{ name }} | {{ typ }} | {{ description }} |
 {%         if spec.contains %}
 {{ result_desc(spec.contains, level + 1) -}}
