--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/banners.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/banners.j2
@@ -7,10 +7,18 @@
 {% if banners.login is arista.avd.defined %}
 !
 banner login
-{{ banners.login }}
+{%     set login = banners.login %}
+{%     if not login.rstrip().endswith('\nEOF') %}
+{%         set login = login.rstrip() + "\nEOF\n" %}
+{%     endif %}
+{{ login }}
 {% endif %}
 {% if banners.motd is arista.avd.defined %}
 !
 banner motd
-{{ banners.motd }}
+{%     set motd = banners.motd %}
+{%     if not (motd.rstrip().endswith('\nEOF')) %}
+{%         set motd = motd.rstrip() + "\nEOF\n" %}
+{%     endif %}
+{{ motd }}
 {% endif %}
