--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-bgp.j2
@@ -529,10 +529,10 @@
 {%         if router_bgp.address_family_evpn.next_hop_mpls_resolution_ribs is arista.avd.defined() %}
 {%             set rib_position = ["Primary", "Secondary", "Tertiary" ] %}
 {%             for rib in router_bgp.address_family_evpn.next_hop_mpls_resolution_ribs %}
-{%                 if rib.type == "tunnel-rib-colored" %}
+{%                 if rib.rib_type == "tunnel-rib-colored" %}
 {%                     set rib_type = "tunnel-rib colored system-colored-tunnel-rib" %}
 {%                 else %}
-{%                     set rib_type = rib.type %}
+{%                     set rib_type = rib.rib_type %}
 {%                 endif %}
 - Next-hop MPLS resolution {{ rib_position[loop.index - 1] }}-RIB : {{ rib_type }} {{ rib.rib_name | arista.avd.default('') }}
 {%             endfor %}
