fix sa_filter out template

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-msdp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-msdp.j2
@@ -48,7 +48,7 @@ router msdp
       sa-filter in list {{ peer.sa_filter.in_list }}
 {%             endif %}
 {%             if peer.sa_filter.out_list is arista.avd.defined %}
-      sa-filter out list {{ peer.sa_filter.in_list }}
+      sa-filter out list {{ peer.sa_filter.out_list }}
 {%             endif %}
 {%             if peer.description is arista.avd.defined %}
       description {{ peer.description }}
