--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-bgp.j2
@@ -535,7 +535,7 @@
 {%                 else %}
 {%                     set rib_type = rib.rib_type %}
 {%                 endif %}
-- Next-hop MPLS resolution {{ rib_position[loop.index - 1] }}-RIB : {{ rib_type }} {{ rib.rib_name | arista.avd.default('') }}
+- Next-hop MPLS resolution {{ rib_position[loop.index0] }}-RIB : {{ rib_type }} {{ rib.rib_name | arista.avd.default('') }}
 {%             endfor %}
 {%         endif %}
 {%         if router_bgp.address_family_evpn.peer_groups is arista.avd.defined %}
