--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
@@ -572,17 +572,20 @@ router bgp {{ router_bgp.as }}
 {%             endif %}
       {{ evpn_neighbor_default_encap_cli }}
 {%         endif %}
-{%         if router_bgp.address_family_evpn.next_hop_mpls_resolution_ribs is arista.avd.defined() %}
-{%             set ns = namespace(evpn_mpls_resolution_ribs = "next-hop mpls resolution ribs") %}
+{%         if router_bgp.address_family_evpn.next_hop_mpls_resolution_ribs is arista.avd.defined %}
+{%             set evpn_mpls_resolution_ribs = [] %}
 {%             for rib in router_bgp.address_family_evpn.next_hop_mpls_resolution_ribs %}
-{%                 if rib.rib_type == "tunnel-rib-colored" %}
-{%                     set rib_type = "tunnel-rib colored system-colored-tunnel-rib" %}
-{%                 else %}
-{%                     set rib_type = rib.rib_type %}
+{%                 if rib.rib_type is arista.avd.defined("tunnel-rib-colored") %}
+{%                     do evpn_mpls_resolution_ribs.append("tunnel-rib-colored system-colored-tunnel-rib" %}
+{%                 elif rib.rib_type is arista.avd.defined("tunnel-rib") and rib.rib_name is arista.avd.defined %}
+{%                     do evpn_mpls_resolution_ribs.append("tunnel-rib " ~ rib.rib_name
+{%                 elif rib.rib_type is arista.avd.defined %}
+{%                     do evpn_mpls_resolution_ribs.append(rib.rib_type) %}
 {%                 endif %}
-{%                 set ns.evpn_mpls_resolution_ribs = ns.evpn_mpls_resolution_ribs ~ ' ' ~ rib_type ~ ' ' ~ rib.rib_name | arista.avd.default('') %}
 {%             endfor %}
-      {{ ns.evpn_mpls_resolution_ribs }}
+{%             if evpn_mpls_resolution_ribs %}
+      next-hop mpls resolution ribs {{ evpn_mpls_resolution_ribs | join(" ") }}
+{%             endif %}
 {%         endif %}
 {%         for peer_group in router_bgp.address_family_evpn.peer_groups | arista.avd.natural_sort('name') %}
 {%             if peer_group.route_map_in is arista.avd.defined %}
