--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-bgp.j2
@@ -530,12 +530,14 @@
 
 {%             set rib_position = ["Primary", "Secondary", "Tertiary" ] %}
 {%             for rib in router_bgp.address_family_evpn.next_hop_mpls_resolution_ribs %}
-{%                 if rib.rib_type == "tunnel-rib-colored" %}
-{%                     set rib_type = "tunnel-rib colored system-colored-tunnel-rib" %}
-{%                 else %}
-{%                     set rib_type = rib.rib_type %}
+{%                 if rib.rib_type is arista.avd.defined("tunnel-rib-colored") %}
+{%                     set evpn_mpls_resolution_rib = "tunnel-rib-colored system-colored-tunnel-rib" %}
+{%                 elif rib.rib_type is arista.avd.defined("tunnel-rib") and rib.rib_name is arista.avd.defined %}
+{%                     set evpn_mpls_resolution_rib = "tunnel-rib " ~ rib.rib_name %}
+{%                 elif rib.rib_type is arista.avd.defined %}
+{%                     set evpn_mpls_resolution_rib = rib.rib_type %}
 {%                 endif %}
-- Next-hop MPLS resolution {{ rib_position[loop.index0] }}-RIB : {{ rib_type }} {{ rib.rib_name | arista.avd.default('') }}
+- Next-hop MPLS resolution {{ rib_position[loop.index0] }}-RIB : {{ evpn_mpls_resolution_rib }}
 {%             endfor %}
 {%         endif %}
 {%         if router_bgp.address_family_evpn.peer_groups is arista.avd.defined %}
