--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-isis.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-isis.j2
@@ -190,62 +190,51 @@ router isis {{ router_isis.instance }}
 {%         endif %}
 {%     endif %}
 {%     if router_isis.authentication is arista.avd.defined %}
-{%         if router_isis.authentication.both is arista.avd.defined %}
-{%             if router_isis.authentication.both.key_id is arista.avd.defined %}
-{%                 for auth_key_id in router_isis.authentication.both.key_id %}
-{%                     if auth_key_id.id is arista.avd.defined and auth_key_id.algorithm is arista.avd.defined %}
-{%                         if auth_key_id.key_type is arista.avd.defined and auth_key_id.key is arista.avd.defined %}
-{%                             if auth_key_id.rfc_5310 is arista.avd.defined(true) %}
-   authentication key-id {{ auth_key_id.id }} algorithm {{ auth_key_id.algorithm }} rfc-5310 key {{ auth_key_id.key_type }} {{ auth_key_id.key }}
-{%                             else %}
-   authentication key-id {{ auth_key_id.id }} algorithm {{ auth_key_id.algorithm }} key {{ auth_key_id.key_type }} {{ auth_key_id.key }}
-{%                             endif %}
-{%                         endif %}
+{%         set both_key_ids = [] %}
+{%         if router_isis.authentication.both.key_ids is arista.avd.defined %}
+{%             for auth_key in router_isis.authentication.both.key_ids | arista.avd.natural_sort("id") %}
+{%                 if auth_key.id is arista.avd.defined
+                       and auth_key.algorithm is arista.avd.defined
+                       and auth_key.key_type is arista.avd.defined
+                       and auth_key.key is arista.avd.defined %}
+{%                     do both_key_ids.append(auth_key.id) %}
+{%                     if auth_key.rfc_5310 is arista.avd.defined(true) %}
+   authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} rfc-5310 key {{ auth_key.key_type }} {{ auth_key.key }}
+{%                     else %}
+   authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} key {{ auth_key.key_type }} {{ auth_key.key }}
 {%                     endif %}
-{%                 endfor %}
-{%             endif %}
-{%         endif %}
-{%         if router_isis.authentication.level_1 is arista.avd.defined %}
-{%             if router_isis.authentication.level_1.key_id is arista.avd.defined %}
-{%                 set both_key_id = [] %}
-{%                 if router_isis.authentication.both.key_id is arista.avd.defined %}
-{%                     for id in router_isis.authentication.both.key_id %}
-{%                         do both_key_id.append(id.id) %}
-{%                     endfor %}
 {%                 endif %}
-{%                 for auth_key_id in router_isis.authentication.level_1.key_id %}
-{%                     if auth_key_id.id is arista.avd.defined and auth_key_id.id not in both_key_id and auth_key_id.algorithm is arista.avd.defined %}
-{%                         if auth_key_id.key_type is arista.avd.defined and auth_key_id.key is arista.avd.defined %}
-{%                             if auth_key_id.rfc_5310 is arista.avd.defined(true) %}
-   authentication key-id {{ auth_key_id.id }} algorithm {{ auth_key_id.algorithm }} rfc-5310 key {{ auth_key_id.key_type }} {{ auth_key_id.key }} level-1
-{%                             else %}
-   authentication key-id {{ auth_key_id.id }} algorithm {{ auth_key_id.algorithm }} key {{ auth_key_id.key_type }} {{ auth_key_id.key }} level-1
-{%                             endif %}
-{%                         endif %}
-{%                     endif %}
-{%                 endfor %}
-{%             endif %}
+{%             endfor %}
 {%         endif %}
-{%         if router_isis.authentication.level_2 is arista.avd.defined %}
-{%             if router_isis.authentication.level_2.key_id is arista.avd.defined %}
-{%                 set both_key_id = [] %}
-{%                 if router_isis.authentication.both.key_id is arista.avd.defined %}
-{%                     for id in router_isis.authentication.both.key_id %}
-{%                         do both_key_id.append(id.id) %}
-{%                     endfor %}
-{%                 endif %}
-{%                 for auth_key_id in router_isis.authentication.level_2.key_id %}
-{%                     if auth_key_id.id is arista.avd.defined and auth_key_id.id not in both_key_id and auth_key_id.algorithm is arista.avd.defined %}
-{%                         if auth_key_id.key_type is arista.avd.defined and auth_key_id.key is arista.avd.defined %}
-{%                             if auth_key_id.rfc_5310 is arista.avd.defined(true) %}
-   authentication key-id {{ auth_key_id.id }} algorithm {{ auth_key_id.algorithm }} rfc-5310 key {{ auth_key_id.key_type }} {{ auth_key_id.key }} level-2
-{%                             else %}
-   authentication key-id {{ auth_key_id.id }} algorithm {{ auth_key_id.algorithm }} key {{ auth_key_id.key_type }} {{ auth_key_id.key }} level-2
-{%                             endif %}
-{%                         endif %}
+{%         if router_isis.authentication.level_1.key_ids is arista.avd.defined %}
+{%             for auth_key in router_isis.authentication.level_1.key_ids %}
+{%                 if auth_key.id is arista.avd.defined
+                       and auth_key.id not in both_key_ids
+                       and auth_key.algorithm is arista.avd.defined
+                       and auth_key.key_type is arista.avd.defined
+                       and auth_key.key is arista.avd.defined %}
+{%                     if auth_key.rfc_5310 is arista.avd.defined(true) %}
+   authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} rfc-5310 key {{ auth_key.key_type }} {{ auth_key.key }} level-1
+{%                     else %}
+   authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} key {{ auth_key.key_type }} {{ auth_key.key }} level-1
 {%                     endif %}
-{%                 endfor %}
-{%             endif %}
+{%                 endif %}
+{%             endfor %}
+{%         endif %}
+{%         if router_isis.authentication.level_2.key_ids is arista.avd.defined %}
+{%             for auth_key in router_isis.authentication.level_2.key_ids %}
+{%                 if auth_key.id is arista.avd.defined
+                       and auth_key.id not in both_key_ids
+                       and auth_key.algorithm is arista.avd.defined
+                       and auth_key.key_type is arista.avd.defined
+                       and auth_key.key is arista.avd.defined %}
+{%                     if auth_key.rfc_5310 is arista.avd.defined(true) %}
+   authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} rfc-5310 key {{ auth_key.key_type }} {{ auth_key.key }} level-2
+{%                     else %}
+   authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} key {{ auth_key.key_type }} {{ auth_key.key }} level-2
+{%                     endif %}
+{%                 endif %}
+{%             endfor %}
 {%         endif %}
 {%         if router_isis.authentication.both.key_type is arista.avd.defined and router_isis.authentication.both.key is arista.avd.defined %}
    authentication key {{ router_isis.authentication.both.key_type }} {{ router_isis.authentication.both.key }}
