--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/dot1x.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/dot1x.j2
@@ -12,6 +12,9 @@ dot1x system-auth-control
 {%     if dot1x.protocol_lldp_bypass is arista.avd.defined(true) %}
 dot1x protocol lldp bypass
 {%     endif %}
+{%     if dot1x.protocol_bpdu_bypass is arista.avd.defined(true) %}
+dot1x protocol bpdu bypass
+{%     endif %}
 {%     if dot1x.dynamic_authorization is arista.avd.defined(true) %}
 dot1x dynamic-authorization
 {%     endif %}
