--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/event-handlers.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/event-handlers.j2
@@ -9,7 +9,40 @@
 !
 event-handler {{ handler.name }}
 {%         if handler.trigger is arista.avd.defined %}
+{%             if handler.trigger is arista.avd.defined("on-maintenance")
+                  and handler.trigger_on_maintenance is arista.avd.defined
+                  and handler.trigger_on_maintenance.operation is arista.avd.defined
+                  and handler.trigger_on_maintenance.stage is arista.avd.defined %}
+{%                 set trigger_on_manitenance_cli =  "trigger " ~ handler.trigger ~ " " ~ handler.trigger_on_maintenance.operation %}
+{%                 if handler.trigger_on_maintenance.bgp is arista.avd.defined %}
+{%                     set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ " bgp " %}
+{%                     if handler.trigger_on_maintenance.bgp.neighbor_address_ipv4 is arista.avd.defined %}
+{%                         set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ handler.trigger_on_maintenance.bgp.neighbor_address_ipv4 %}
+{%                     elif handler.trigger_on_maintenance.bgp.neighbor_address_ipv6 is arista.avd.defined %}
+{%                         set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ handler.trigger_on_maintenance.bgp.neighbor_address_ipv6 %}
+{%                     elif handler.trigger_on_maintenance.bgp.peer_group_name is arista.avd.defined %}
+{%                         set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ handler.trigger_on_maintenance.bgp.peer_group_name %}
+{%                     endif %}
+{%                 elif handler.trigger_on_maintenance.interface.interface_type is arista.avd.defined and handler.trigger_on_maintenance.interface.interface_number is arista.avd.defined %}
+{%                     set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ " interface " ~ handler.trigger_on_maintenance.interface.interface_type ~ " " ~ handler.trigger_on_maintenance.interface.interface_number %}
+{%                 elif handler.trigger_on_maintenance.unit is arista.avd.defined %}
+{%                     set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ " unit " ~ handler.trigger_on_maintenance.unit %}
+{%                 endif %}
+{%                 if handler.trigger_on_maintenance.stage is arista.avd.defined("after") or handler.trigger_on_maintenance.stage is arista.avd.defined("before") %}
+{%                     set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ " " ~ handler.trigger_on_maintenance.stage ~ " " ~ handler.trigger_on_maintenance.after_before_stage %}
+{%                 elif handler.trigger_on_maintenance.stage is arista.avd.defined("all") %}
+{%                     set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ " all" %}
+{%                 elif handler.trigger_on_maintenance.stage is arista.avd.defined("begin") %}
+{%                     set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ " begin" %}
+{%                 elif handler.trigger_on_maintenance.stage is arista.avd.defined("end") %}
+{%                     set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ " end" %}
+{%                 elif handler.trigger_on_maintenance.stage is arista.avd.defined("vrf") %}
+{%                     set trigger_on_manitenance_cli = trigger_on_manitenance_cli ~ " vrf " ~ handler.trigger_on_maintenance.vrf %}
+{%                 endif %}
+   {{ trigger_on_manitenance_cli }}
+{%             else %}
    trigger {{ handler.trigger }}
+{%             endif %}
 {%             if handler.regex is arista.avd.defined %}
       regex {{ handler.regex }}
 {%             endif %}
