Feat(eos_cli_config_gen): Add support for monitor layer1 (#3540)

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-device-documentation.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-device-documentation.j2
@@ -35,6 +35,8 @@
 {% include 'documentation/monitoring.j2' %}
 {# Monitor Connectivity #}
 {% include 'documentation/monitor-connectivity.j2' %}
+{# Monitor Layer 1 #}
+{% include 'documentation/monitor-layer1.j2' %}
 {# Hardware TCAM Profile #}
 {% include 'documentation/tcam-profile.j2' %}
 {# Link Tracking Groups #}
